--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
+  "engines": {
+    "node": "21.6.2",
+    "npm": "6.14.13"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Hamzenium/Library-Management-System.git"
