--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "library-management-system",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
@@ -23,11 +23,18 @@
   },
   "homepage": "https://github.com/Hamzenium/Library-Management-System#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "firebase-admin": "^12.0.0",
-    "serve": "^14.2.1",
-    "stripe": "^14.19.0"
+    "express-fileupload": "^1.4.2",
+    "firebase-admin": "^11.9.0",
+    "json": "^11.0.0",
+    "node-fetch": "^3.3.1",
+    "nodemailer": "^6.9.7",
+    "nodemon": "^2.0.22",
+    "string-similarity": "^4.0.4",
+    "string-similarity-js": "^2.1.4",
+    "stripe": "^12.10.0"
   }
 }
