--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "nodemon app.js"
   },
   "engines": {
-    "node": "21.6.2",
-    "npm": "6.14.13"
+    "node": "16.20.2",
+    "npm": "8.19.4"
 },
   "repository": {
     "type": "git",
@@ -23,18 +23,11 @@
   },
   "homepage": "https://github.com/Hamzenium/Library-Management-System#readme",
   "dependencies": {
-    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.2",
-    "firebase-admin": "^11.9.0",
-    "json": "^11.0.0",
-    "node-fetch": "^3.3.1",
-    "nodemailer": "^6.9.7",
-    "nodemon": "^2.0.22",
-    "string-similarity": "^4.0.4",
-    "string-similarity-js": "^2.1.4",
-    "stripe": "^12.10.0"
+    "firebase-admin": "^12.0.0",
+    "serve": "^14.2.1",
+    "stripe": "^14.19.0"
   }
 }
